# Timesheet-core-backend

./: .coverage  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  =2.18.0  Dockerfile  Dockerfile.celery  Makefile  README.md  celerybeat-schedule  coverage.xml  credentials.example.json  docker-compose.yaml  entrypoint.sh  history.txt  main.py  pyproject.toml  runner.py  setup_gmail_auth.py  sonar-project.properties  test_fallback.py
.scannerwork/: report-task.txt
attachments/: Day 02.txt
requirements/: requirements.txt
src/: main.py  test.ipynb
src/api/middleware/: cors.py  error_handler.py  logging.py  metrics.py  request_context.py
src/api/rest/: app.py  dependencies.py
src/config/: settings.py
src/constants/: error_constants.py  error_responses.py
src/control/agents/: email_graph.py  email_state.py  prompts.py
src/core/services/: approval_service.py  assignment_services.py  client_rule_services.py  client_services.py  email_ingestion.py  email_processing_service.py  email_services.py  email_whitelist_services.py  employee_matching_service.py  employee_services.py  gcs_service.py  gmail_auth.py  gmail_service.py  holiday_service.py  manual_review_service.py  paycode_service.py  payroll_payslip_service.py  payroll_service.py  process_timesheet_service.py  rule_engine_service.py  rule_violation_service.py  timesheet_service.py
src/data/clients/: database.py
src/data/repositories/: approval_repository.py  assignment_repository.py  audit_log_repository.py  client_repository.py  client_rule_repository.py  email_repository.py  email_whitelist_repository.py  employee_repository.py  holiday_repository.py  manual_review_repository.py  paycode_repository.py  (+4 more)
src/schemas/: approval_schemas.py  assignment_schemas.py  audit_log_schemas.py  client_rule_schemas.py  client_schemas.py  display_schemas.py  email_schemas.py  employee_schemas.py  holiday_schemas.py  manual_review_schemas.py  paycode_schemas.py  payroll_payslip_schemas.py  payroll_schemas.py  rule_violation_schemas.py  timesheet_schemas.py  timesheet_update_schemas.py
src/utils/: date_formating.py  email_helper.py  email_processing_helpers.py  gcs_service.py  matching_utils.py  payroll_ready_format.py  time_formatting.py  time_sheet_display_formatting.py  validation_helper.py
src/workers/: celery_app.py
(+38 files in other folders)
